--- a/contact.html
+++ b/contact.html
@@ -46,7 +46,7 @@
     <article id="test">
         <h1 id ="atop">Contact Information</h1>
 
-<a href="https://discord.gg/Q2tTv623" id="testimonials_link"> <h1 id ="atop">DISCORD: The Home of the Party</h1> </a>
+<a href="https://discord.gg/Q2tTv623" id="testimonials_link"> <h1 id ="atop">DISCORD: Dev Server</h1> </a>
 <blockquote><span class ="quote">&ldquo;</span>
 
 <a href="articlesmain.html" id="testimonials_link"> <h1 id ="atop">EMAIL: TTPSTUDIOS@gmail.com</h1> </a>
@@ -67,7 +67,6 @@
     <li><a href="WritingMain.html" id="why_a_pediatric_link">-Writing-</a></li>
     <li><a href="software.html" id="services_link">-Software-</a></li>
     <li><a href="contact.html" id="testimonials_link">-Contact-</a></li>
-    <li><a href="hours.html" id="hours_and_location_link">Hours&nbsp;&amp;&nbsp;Location</a></li>
     <li><a href="register.html" id="testimonials_link">-Sign IN/Sign UP-</a></li>
      <li><a href="https://www.facebook.com/groups/899932487136175" target="_blank" title="Facebook">Follow us on Facebook</a></li>
     </ul>
