--- a/article1.html
+++ b/article1.html
@@ -184,7 +184,7 @@
  
 
 
-    <br><i><a href="https://thetrueparty.github.io/PROTOTYPE/reviewsindex2.html">-Back to Reviews Index</a></i></blockquote>
+    <br><i><a href="https://thetrueparty.github.io/PROTOTYPE/articlesmain.html">-Back to Articles Index</a></i></blockquote>
 
 
 <br><p> <a href="#atop"> [Top]</a></p>
