--- a/MoonDogMain.html
+++ b/MoonDogMain.html
@@ -57,7 +57,7 @@
     Price: $1.00
 <br><i>-Last Updated: February 2025</i></blockquote>
 
-<img src= "https://github.com/TheTrueParty/PROTOTYPE/blob/master/MoonDogShot1.png?raw">
+<img src= "MoonDogShot1.png">
 <img src="image_url.jpg" alt="MoondogPhoto2">
 <img src="image_url.jpg" alt="MoondogPhoto3">
 
