--- a/MoonDogMain.html
+++ b/MoonDogMain.html
@@ -58,9 +58,10 @@
 <br><i>-Last Updated: February 2025</i></blockquote>
 
 <img src= "MoonDogShot1.png">
-<img src="image_url.jpg" alt="MoondogPhoto2">
-
-Get it here!
+<img src= MoonDogShot2.png">
+        
+Get it here!!!
+        
 <a href="https://github.com/TheTrueParty/PROTOTYPE/releases/download/MoonDog/eh.exe">MoonDog</a> 
 
 </form>
