--- a/about.html
+++ b/about.html
@@ -47,7 +47,9 @@
         <h1 id ="atop">TTP and The Endless Party</h1>
 <blockquote><span class ="quote">&ldquo;</span>
 
-    "Today is a time to celebrate, because tommorow we all may die." -Tony Todd-
+    "Today is a time to celebrate." -Tony Todd-
+
+
 
 A long time ago I stumbled upon the idea of celebrating each and every day to it's fullest potetional. Following ideas stressed by those around me, of having fun everyday, in every possible way. 
     
