--- a/QrazyClonesMain.html
+++ b/QrazyClonesMain.html
@@ -59,7 +59,7 @@ As the name suggests this is cloned versions made by me of several classic games
 
 
 Get It Here!
-<a href="https://github.com/TheTrueParty/PROTOTYPE/releases/download/Puzzles/QrazyClones.exe">ClonePack</a> 
+<a href="https://github.com/TheTrueParty/PROTOTYPE/releases/download/QrazyClones/QrazyClones.zip">ClonePack</a> 
 
         
 <article id="test">
