--- a/GuidedSolarTourMain.html
+++ b/GuidedSolarTourMain.html
@@ -59,6 +59,8 @@ Solar Tours is a short guided tour of our own solar system. Zoom in and Zoom out
 Get it here!!!!
 <a href="https://github.com/TheTrueParty/PROTOTYPE/releases/download/SolarTour/SolarTour.zip">SolarTour</a> 
         
+<a href="https://github.com/TheTrueParty/PROTOTYPE/releases/download/SolarTour">SolarTourMainFolder</a>      
+   
 <article id="test">
 <a href="market.html" id="Market_link"> <h1 id ="atop">BACK TO MARKETPLACE INDEX</h1> </a>
 <blockquote><span class ="quote">&ldquo;</span>
