--- a/market.html
+++ b/market.html
@@ -50,25 +50,22 @@
 <a href="MoonDogMain.html" id="MoonDogMain_link"> <h1 id ="atop">MOONDOG</h1> </a>
 <blockquote><span class ="quote">&ldquo;</span>
     Moondog is a short action packed game for any device. 
-    15 levels
+    5 levels
     7 weapons
-    15 Boss fights
+    5 Boss fights
     1 Secret level
     1 Seceret Weapon
-    Price: $1.00
 <br><i>-Last Updated: March 2025</i></blockquote>
         
 <a href="GuidedSolarTourMain.html" id="GuidedSolarTourMain_link"> <h1 id ="atop">Guided Solar Tour</h1> </a>
 <blockquote><span class ="quote">&ldquo;</span>
   A must have for any space enthuisast. View planetary orbital paths, zoom in to get a better look, and read articles written by me about each planet.
-    Price: $5.00
 <br><i>-Last Updated: Januray 2025</i></blockquote>
 
         
     <a href="QrazyClonesMain.html" id="QrazyClonesMain_link"> <h1 id ="atop">QrazyClones</h1> </a>
 <blockquote><span class ="quote">&ldquo;</span>
-Qrazy Clones: A collection of clones of various puzzle games. Tetris, breakout, pong.
-    Price: $5.00
+Qrazy Clones: A collection of clones of various puzzle games. Breakout, pong and others.
 <br><i>-Last Updated: April 2025</i></blockquote>
 
 
