--- a/software.html
+++ b/software.html
@@ -46,7 +46,79 @@
 
     <article id="test">
         <h1 id ="atop">SOFTWARE INDEX</h1>
+<h1>Software is organized by game genre whenever possible. Pick out the one you are most interested in. If you are a person like me you will check them all.</h1>
 
+<h1>TopDownShooter</h1>
+<h1>Simulation/Space - SS</h1>
+<h1>First-Person Shooter - FPS </h1>
+<h1>Role Playing Game - RPG</h1>
+<h1>Turn-Based Strategy - TBS/4X</h1>
+<h1>Real-Time Strategy - RTS</h1>
+<h1>Miscellaneous - MISC </h1>
+
+
+Real-Time Strategy - RTS
+Real-Time Strategy is characterized by giving the player a large number of diverse playing pieces, often using a combination of them to achieve victory, similar to chess. It is notable for inserting players onto large backdrops often called a "map" where more often than not, they are required to build and expand cities, exploit resources, and conduct group actions/assaults. All action takes place in real time, as in 30 seconds in the real world are equal to time passage within the game.
+
+Examples: Star Trek Armada, Star Trek New Worlds, WarCraft/StarCraft
+
+ 
+
+Turn-Based Strategy - TBS/4X
+Turn-Based Strategy is similar to an RTS in many ways, except the way timing is handled is different. The actions a player takes place over phased rounds, taking turns which can have any length of time, when they are satisfied they end their turn allowing other players to make their moves. The catch is, you can only do so much on any one turn. Once all players have gotten a turn, a new round of turns begins. "4X" refers to the four main loose groups of which actions that can be taken are based: Exploration, Expansion, Exploitation and Extermination.
+
+Examples: Birth of the Federation, Civilization series, Master of Orion, Ascendancy
+
+ 
+
+Role Playing Game - RPG
+A role playing game is any game that involves inserting the player into a specific role/profession or career, and features cultivating and upgrading said character as experience, rewards and treasure is awarded for completing missions or exploring.
+
+Examples: Starfleet Command, Star Trek Online
+
+ 
+
+First-Person Shooter - FPS
+A first-person shooter is any game that the player is called upon to run & gun, firefight to the finish. It is common to include a large arsenal of weapons and military items, to combat creatures usually referred to as "enemies" to reach the exit. In early shooters the objectives were to simply find the exit, but have since evolved to incorporate additional objectives such as but not limited to, killing all enemies, finding all the weapons to story related missions such as push the button to fix the comm link.
+
+Examples: Star Trek Elite Force, Star Trek (2013), Wolf-3D
+
+ 
+
+Simulation/Space - SS
+This acronym may stand for "Simulation/Space" or sometimes, less commonly, for "Starship/Simulator". A seemingly now defunct genre, this was once highly popular. It is different than an RPG in that there is no levels or experience bars. Nor is there legendary items or artifacts to hunt down, at least in the traditional sense. Rather the focus is on presenting a highly detailed, accurate experience of how it would feel to fly planes, spaceships, drive certain vehicles, and more.
+
+Examples: Klingon Academy, EGA Trek, Wing Commander
+
+ 
+
+Action/Adventure - AA
+These games are often centered on traveling between different sets, called rooms, and the accumulation of various inventory items, and using said items to help solve or work out puzzles. Most also gain noteworthy over the variety of backgrounds for each game "room", sight-seeing is part of the fun of this genre. The player may have use to several functions such as looking, touching, tasting etc, in order to gain clues on how to proceed. Mazes are also common though not every such game features one. It is also not uncommon to also feature a distinguishing mini game or two, to break up some of the periods of boredom. Some also provide numerous ways to die, but the intended aim of this is at entertainment rather than dramatic purposes.
+
+Examples: Judgment Rites, Space Quest, King's Quest
+
+ 
+
+Learning Tool/Interactive Learning Tool - LT/ILT
+This is not a genre of full on "games" such as what the gaming community has come to expect. Rather its focus is on teaching and conveying information. Action, pressure and other staples of other genres of game are genuinely absent, so the player's focus can remain on absorbing the information.
+
+This is not to say all these programs are just computerized reading, there usually is a degree of interactivity, to keep the audience engaged.
+
+Examples: Starship Creator, Star Trek Encyclopedia Edition II for PC
+
+ 
+
+Miscellaneous - MISC
+This is for software that do not fall into one specific category. They might be hybrids, or one offs done for perhaps the sake of randomness.
+
+Examples: Star Trek Pinball, Star Trek D.A.C.
+
+        
+ 
+<h1>Or you may be looking for everything altogether, in one unified location.</h1>
+
+
+        
 <a href="market.html" id="testimonials_link"> <h1 id ="atop">MARKETPLACE INDEX</h1> </a>
     <blockquote><span class ="quote">&ldquo;</span>
     For comercial software developed by TTP or friends of the TTP crew. 
